--- a/src/app/components/movieCard/abstract-movieCard/abstract-movieCard.component.html
+++ b/src/app/components/movieCard/abstract-movieCard/abstract-movieCard.component.html
@@ -1,3 +1,29 @@
-<p>
-  abstract-movieCard works!
-</p>
+<div
+  class="movie-card mat-elevation-z4 d-flex flex-column align-items-start"
+  (click)="viewMovie(movie)"
+>
+  <!-- Image Section -->
+  <div class="image-section w-100">
+    <img [src]="movie.src" alt="Movie Poster" class="img-fluid w-100" />
+  </div>
+
+  <!-- Details Section -->
+  <div class="details-section w-100 p-3">
+    <div class="detail d-flex justify-content-between align-items-center">
+      <h3 mat-subheader class="label">Name</h3>
+      <p class="value">{{ movie.name }}</p>
+    </div>
+    <div class="detail d-flex justify-content-between align-items-center">
+      <h3 mat-subheader class="label">Category</h3>
+      <p class="value">{{ movie.category }}</p>
+    </div>
+    <div class="detail d-flex justify-content-between align-items-center">
+      <h3 mat-subheader class="label">Duration</h3>
+      <p class="value">{{ movie.duration }}</p>
+    </div>
+    <div class="detail d-flex justify-content-between align-items-center">
+      <h3 mat-subheader class="label">Cinema</h3>
+      <p class="value">{{ movie.cinema }}</p>
+    </div>
+  </div>
+</div>
