--- a/src/app/components/list/movie-list/movie-list.component.css
+++ b/src/app/components/list/movie-list/movie-list.component.css
@@ -1,3 +1,8 @@
-.body{
+.list{
   padding-top: 5px;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
 }
