--- a/src/app/components/list/movie-list/movie-list.component.html
+++ b/src/app/components/list/movie-list/movie-list.component.html
@@ -1,3 +1,5 @@
-<ng-container *ngFor="let movie of movies">
-  <app-abstract-movieCard [movie]="movie"></app-abstract-movieCard>
-</ng-container>
+<div class="list" >
+    <ng-container *ngFor="let movie of movies">
+    <app-abstract-movieCard [movie]="movie"></app-abstract-movieCard>
+    </ng-container>
+</div>
