--- a/src/app/components/movieCard/detailed-movieCard/detailed-movieCard.component.html
+++ b/src/app/components/movieCard/detailed-movieCard/detailed-movieCard.component.html
@@ -4,31 +4,36 @@
     <img [src]="movie.h_src" alt="Movie Poster" class="img-fluid w-100" />
   </div>
 
-  <!-- Details Section -->
-  <div class="details-section w-100 p-3">
-    <div class="detail d-flex justify-content-between align-items-center">
-      <h3 mat-subheader class="label">Name</h3>
-      <p class="value">{{ movie.name }}</p>
-    </div>
-    <div class="detail d-flex justify-content-between align-items-center">
-      <h3 mat-subheader class="label">Category</h3>
-      <p class="value">{{ movie.category }}</p>
-    </div>
-    <div class="detail d-flex justify-content-between align-items-center">
-      <h3 mat-subheader class="label">Duration</h3>
-      <p class="value">{{ movie.duration }}</p>
-    </div>
-    <div class="detail d-flex justify-content-between align-items-center">
-      <h3 mat-subheader class="label">Cinema</h3>
-      <p class="value">{{ movie.cinema }}</p>
-    </div>
-    <div class="detail d-flex justify-content-between align-items-center">
-      <h3 mat-subheader class="label">Starring</h3>
-      <p class="value">{{ movie.starring }}</p>
-    </div>
-    <div class="detail d-flex justify-content-between align-items-center">
-      <h3 mat-subheader class="label">Description</h3>
-      <p class="value">{{ movie.description }}</p>
-    </div>
+  <div class="w-100 p-3 dataSection">
+      <!-- Details Section -->
+      <div class="details-section w-100 p-3 ">
+        <div class="detail d-flex justify-content-between align-items-start">
+          <h3 mat-subheader class="label">Name</h3>
+          <p class="value">{{ movie.name }}</p>
+        </div>
+        <div class="detail d-flex justify-content-between align-items-center">
+          <h3 mat-subheader class="label">Category</h3>
+          <p class="value">{{ movie.category }}</p>
+        </div>
+        <div class="detail d-flex justify-content-between align-items-center">
+          <h3 mat-subheader class="label">Duration</h3>
+          <p class="value">{{ movie.duration }}</p>
+        </div>
+      </div>
+
+      <div class="details-section w-100 p-3 ">
+        <div class="detail d-flex justify-content-between align-items-center">
+          <h3 mat-subheader class="label">Cinema</h3>
+          <p class="value">{{ movie.cinema }}</p>
+        </div>
+        <div class="detail d-flex justify-content-between align-items-center">
+          <h3 mat-subheader class="label">Starring</h3>
+          <p class="value">{{ movie.starring }}</p>
+        </div>
+        <div class="detail d-flex justify-content-between align-items-center">
+          <h3 mat-subheader class="label">Description</h3>
+          <p class="value">{{ movie.description }}</p>
+        </div>
+      </div>
   </div>
 </div>
