--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!-- <app-movie-list></app-movie-list> -->
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
+<!-- <app-login></app-login> -->
+<app-signup></app-signup>
+<!-- <app-feedback></app-feedback> -->
