--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,145 @@
-<p>
-  login works!
-</p>
+<div
+  class="container"
+  style="
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+    color: #11435a;
+  "
+>
+  <div
+    class="row"
+    style="
+      width: 100%;
+      max-width: 400px;
+      background: #e2ebef;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      text-align: center;
+    "
+  >
+    <form [formGroup]="loginForm" (ngSubmit)="submitLoginForm(loginForm)">
+      <div class="container">
+        <div class="profile_img">
+          <img
+            src="../../../assets/imgs/pfp.jpg"
+            alt=""
+            class="img-fluid shadow"
+            style="
+              position: relative;
+              border-radius: 50%;
+              width: 70px;
+              justify-content: center;
+            "
+          />
+        </div>
+      </div>
+      <h2>Login</h2>
+      <div class="mb-3 form-group">
+        <label for="email" class="form-label">Email</label>
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          placeholder="name@example.com"
+          formControlName="email"
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            loginForm.get('email')?.errors && loginForm.get('email')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="loginForm.get('email')?.getError('required')">
+            Email is required
+          </p>
+          <p *ngIf="loginForm.get('email')?.getError('email')">
+            Email is Invalid
+          </p>
+        </div>
+      </div>
+      <div class="mb-3 form-group">
+        <label for="pass" class="form-label">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="pass"
+          placeholder="***********"
+          formControlName="password"
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            loginForm.get('password')?.errors &&
+            loginForm.get('password')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="loginForm.get('password')?.getError('required')">
+            Password is required
+          </p>
+          <p
+            *ngIf="
+              loginForm.get('password')?.getError('pattern') ||
+              loginForm.get('password')?.getError('minlength') ||
+              loginForm.get('password')?.getError('maxlength')
+            "
+          >
+            Password must be alphanumeric, length between 8 and 15
+          </p>
+        </div>
+      </div>
+      <button
+        type="submit"
+        class="btn"
+        [disabled]="loginForm.invalid"
+        (click)="displayLoader()"
+      >
+        <span *ngIf="!showLoader">Login</span>
+        <div style="justify-content: center; display: flex">
+          <mat-spinner
+            style="width: 3em; height: 2em"
+            *ngIf="showLoader"
+          ></mat-spinner>
+        </div>
+      </button>
+      <div
+        class="alert alert-danger"
+        style="
+          height: max-content;
+          min-height: 30px;
+          max-height: 100px;
+          margin-top: 10px;
+          padding-top: 4px;
+          padding-bottom: 0px;
+          overflow: none;
+          color: #666;
+        "
+      >
+        <p>Credentials are incorrect</p>
+      </div>
+    </form>
+  </div>
+</div>
