--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- <app-movie-list></app-movie-list> -->
 
 <!-- <div class="list">
@@ -6,8 +5,9 @@
 </div> -->
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
-<app-login></app-login>
- 
-<app-signup></app-signup>
+<!-- <app-login></app-login>
+
+<app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
+<app-footer></app-footer>
