--- a/src/app/components/charts/pie-chart/pie-chart.component.html
+++ b/src/app/components/charts/pie-chart/pie-chart.component.html
@@ -1,3 +1,3 @@
-<p>
-  pie-chart works!
-</p>
+<div class="chart-container">
+  <canvas #pie style="max-height: 270px; max-width: 270px">{{ chart }}</canvas>
+</div>
