--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
 <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
+
+<app-dashboard></app-dashboard>
