--- a/src/app/components/charts/bar-chart/bar-chart.component.html
+++ b/src/app/components/charts/bar-chart/bar-chart.component.html
@@ -1,3 +1,3 @@
-<p>
-  bar-chart works!
-</p>
+<div class="chart-container">
+  <canvas #bar style="max-height: 300px; max-width: 400px">{{ chart }}</canvas>
+</div>
