--- a/src/app/components/header/vendor-header/vendor-header.component.html
+++ b/src/app/components/header/vendor-header/vendor-header.component.html
@@ -1,3 +1,22 @@
-<p>
-  vendor-header works!
-</p>
+<mat-toolbar class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+    <div>
+        <img class="img" src="../../assets/WhatsApp Image 2024-11-29 at 20.16.54_39526a40.jpg" width="60" height="60">
+    </div>
+    <div class="mydiv">
+        <button class='mybutton myspn' mat-button color="basic">
+            <span>Home</span>
+        </button>
+        <button class='mybutton myspn' mat-button color="basic">
+            <span>Cinema List</span>
+        </button>
+        <button class='mybutton myspn' mat-button color="basic">
+            <span>FAQ</span>
+        </button>
+        <button class='mybutton myspn' mat-button color="basic">
+            <span>Feedback</span>
+        </button>
+    </div>
+    <div>
+        <img class="img1" src="../../assets/images.jpeg" alt="">
+    </div>
+</mat-toolbar>
