--- a/src/app/components/header/customer-header/customer-header.component.html
+++ b/src/app/components/header/customer-header/customer-header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
     <div>
-        <img class="img" src="../../assets/WhatsApp Image 2024-11-29 at 20.16.54_39526a40.jpg" width="60" height="60">
+        <img class="img" src="../../assets/imgs/WhatsApp Image 2024-11-29 at 20.16.54_39526a40.jpg" width="60" height="60">
     </div>
     <div class="mydiv">
         <button class='mybutton myspn' mat-button color="basic">
@@ -17,6 +17,6 @@
         </button>
     </div>
     <div>
-        <img class="img1" src="../../assets/images.jpeg" alt="">
+        <img class="img1" src="../../imgs/assets/images.jpeg" alt="">
     </div>
 </mat-toolbar>
