--- a/src/app/components/header/admin-header/admin-header.component.html
+++ b/src/app/components/header/admin-header/admin-header.component.html
@@ -17,6 +17,6 @@
         </button>
     </div>
     <div>
-        <img class="img1" src="../../assets/images.jpeg" alt="">
+        <img class="img1" src="../../assets/imgs/images.jpeg" alt="">
     </div>
 </mat-toolbar>
