all footer, chart, navbar mergeing tested

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
 <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
-<!-- <app-footer></app-footer> -->
-
+<!-- <app-gust-header></app-gust-header> -->
+<!-- <app-admin-header></app-admin-header> -->
+<!-- <app-customer-header></app-customer-header> -->
+<app-vendor-header></app-vendor-header>
 <app-dashboard></app-dashboard>
+<app-footer></app-footer>
