--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
 </div> -->
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
-<!-- <app-login></app-login>
+<!-- <app-login></app-login> -->
 
-<app-signup></app-signup> -->
+<!-- <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
 <!-- <app-gust-header></app-gust-header> -->
 <!-- <app-admin-header></app-admin-header> -->
 <!-- <app-customer-header></app-customer-header> -->
-<app-vendor-header></app-vendor-header>
+<!-- <app-vendor-header></app-vendor-header>
 <app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
