--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <app-movie-list></app-movie-list> -->
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
 <!-- <app-login></app-login> -->
-<app-signup></app-signup>
+<!-- <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
+<app-vendor-form></app-vendor-form>
