--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   class="container"
   style="
     display: flex;
@@ -120,6 +120,132 @@
           ></mat-spinner>
         </div>
       </button>
+    </form>
+  </div>
+</div> -->
+<div class="body">
+  <div
+    class="container"
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #11435a;
+      position: relative;
+      width: 100%;
+      max-width: 550px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      margin-top: 40px;
+    "
+  >
+    <form
+      [formGroup]="feedbackForm"
+      (ngSubmit)="submitFeedbackForm(feedbackForm)"
+      class="row g-3"
+    >
+      <div class="container">
+        <div
+          class="profile_img"
+          style="justify-content: center; align-items: center; display: flex"
+        >
+          <img
+            src="../../../assets/imgs/pfp.jpg"
+            alt=""
+            class="img-fluid shadow"
+            style="
+              position: relative;
+              border-radius: 50%;
+              width: 70px;
+              justify-content: center;
+            "
+          />
+        </div>
+      </div>
+      <h2 style="display: flex; justify-content: center">Feedback</h2>
+      <div class="col-md-12">
+        <label for="email" class="form-label">Email</label>
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          placeholder="name@example.com"
+          formControlName="email"
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            feedbackForm.get('email')?.errors &&
+            feedbackForm.get('email')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="feedbackForm.get('email')?.getError('required')">
+            Email is required
+          </p>
+          <p *ngIf="feedbackForm.get('email')?.getError('email')">
+            Email is Invalid
+          </p>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <label for="description" class="form-label">Feedback</label>
+        <textarea
+          class="form-control"
+          id="description"
+          rows="3"
+          placeholder="Enter your feedback here"
+          formControlName="feedback"
+        ></textarea>
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            feedbackForm.get('feedback')?.errors &&
+            feedbackForm.get('feedback')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="feedbackForm.get('feedback')?.getError('required')">
+            Feedback is required
+          </p>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <button
+          type="submit"
+          class="btn"
+          [disabled]="feedbackForm.invalid"
+          (click)="displayLoader()"
+        >
+          <span *ngIf="!showLoader">Submit</span>
+          <div style="justify-content: center; display: flex">
+            <mat-spinner
+              style="width: 3em; height: 2em"
+              *ngIf="showLoader"
+            ></mat-spinner>
+          </div>
+        </button>
+      </div>
     </form>
   </div>
 </div>
