--- a/src/app/components/form/vendor-form/vendor-form.component.css
+++ b/src/app/components/form/vendor-form/vendor-form.component.css
@@ -1,9 +1,34 @@
-form{
+.body{
+  width: 100%;
+  background-image: url('../../../assets/cinema.jpeg');
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  padding: 50px;
+}
+
+.body::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.47);
+  z-index: -1;
+}
+
+/* form{
   width: 700px;
   height: auto;
   border-radius: 25px;
   justify-content: center;
-}
+} */
 
 form h2{
   margin-top: 2px;
@@ -11,7 +36,7 @@ form h2{
   color: #333;
 }
 
-.form-group{
+/* .form-group{
   margin-bottom: 20px;
   text-align: left;
   padding-bottom: 20px;
@@ -31,17 +56,17 @@ form h2{
   border: 1px solid #ddd;
   border-radius: 4px;
   transition: border-color 0.3s;
-}
+} */
 
-.name-group{
+/* .name-group{
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
-  /* flex: 1; */
+  justify-content: space-between;
+  flex: 1;
   flex-wrap: nowrap;
   flex-grow: 2;
-}
-
+} */
+/*
 .name-group input{
   width: 100%;
   padding-right: 100px;
@@ -55,7 +80,7 @@ form h2{
   display: flex;
   flex-direction: column;
 
-}
+} */
 
 .btn {
   border: 2px solid #11435a;
