--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
 <!-- <app-login></app-login> -->
 <!-- <app-signup></app-signup> -->
-<!-- <app-feedback></app-feedback> -->
-<app-vendor-form></app-vendor-form>
+<app-feedback></app-feedback>
+<!-- <app-vendor-form></app-vendor-form> -->
+<!-- <app-vendor-form></app-vendor-form> -->
