--- a/src/app/components/list/cinema-list/cinema-list.component.html
+++ b/src/app/components/list/cinema-list/cinema-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  cinema-list works!
-</p>
+<div class="cinema-list">
+  <h2>Cinema List</h2>
+  <app-cinema-list-item [cinemaList]="cinemaList"></app-cinema-list-item>
+</div>
+
