--- a/src/app/components/list/feedback-list/feedback-list.component.html
+++ b/src/app/components/list/feedback-list/feedback-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  feedback-list works!
-</p>
+<div class="feedback-list">
+  <h2 class="text-dark">Feedback List</h2>
+  <app-feedback-list-item [feedbackList]="feedbackList"></app-feedback-list-item>
+</div>
