--- a/src/app/components/list/movie-list/movie-list.component.css
+++ b/src/app/components/list/movie-list/movie-list.component.css
@@ -6,4 +6,10 @@
   gap: 15px;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 16px;
+  margin: 16px; 
+
 }
