--- a/src/app/components/list/reservation-list/reservation-list.component.html
+++ b/src/app/components/list/reservation-list/reservation-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  reservation-list works!
-</p>
+<div class="container">
+    <h3>Reservation List</h3>
+    <app-reservation-list-item [reservations]="reservations"></app-reservation-list-item>
+</div>
+
