--- a/src/app/components/list/users-list/user-list.component.html
+++ b/src/app/components/list/users-list/user-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  users-list works!
-</p>
+<div class="User-list">
+  <h2>User List</h2>
+  <app-user-list-item [VendorList]="VendorList"></app-user-list-item>
+</div>
