--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,23 @@
-<!-- <app-movie-list></app-movie-list> -->
+<!-- <app-movie-list></app-movie-list>  -->
 
 <!-- <div class="list">
     <app-detailed-movieCard *ngFor="let movie of movies" [movie]="movie"></app-detailed-movieCard>
 </div> -->
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
-<!-- <app-login></app-login>
+<!-- 
 
-<app-signup></app-signup> -->
+<!<app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
-<!-- <app-gust-header></app-gust-header> -->
+<!--<app-gust-header></app-gust-header> -->
 <!-- <app-admin-header></app-admin-header> -->
-<!-- <app-customer-header></app-customer-header> -->
-<app-vendor-header></app-vendor-header>
-<app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<!-- <app-customer-header></app-customer-header> --> <br><br><br>
+<!-- <app-vendor-header></app-vendor-header> -->
+<!-- <app-reservation-list></app-reservation-list> -->
+<!-- <app-feedback-list></app-feedback-list> -->
+<!-- <app-cinema-list></app-cinema-list> -->
+<!-- <app-users-list></app-users-list> -->
+
+<!--<app-dashboard></app-dashboard>-->
+<!--<app-footer></app-footer>-->
