--- a/src/app/components/list-item/cinema-list-item/cinema-list-item.component.html
+++ b/src/app/components/list-item/cinema-list-item/cinema-list-item.component.html
@@ -1,3 +1,38 @@
-<p>
-  cinema-list-item works!
-</p>
+
+<div class="container mt-4">
+    <h5 class="text-light">Cinema List</h5>
+    <div class="list-group bg-light p-3 rounded">
+      <!-- Header Row -->
+      <div
+        class="list-group-item d-flex justify-content-between align-items-center fw-bold"
+        style="background-color: #f1f1f1; border-radius: 8px;"
+      >
+        <span>Name</span>
+        <span>Location</span>
+        <span>Number of Movies</span>
+        <span>Action</span>
+      </div>
+  
+      <!-- Dynamic Rows -->
+      <div
+        *ngFor="let cinema of cinemaList; let i = index"
+        class="list-group-item d-flex justify-content-between align-items-center"
+        [ngStyle]="{
+          'background-color': i % 2 === 0 ? '#dbe9f1' : '#549aab',
+          'border-radius': '8px' ,
+          'color': i % 2 === 0 ? '#000' : '#fff'
+        }"
+      >
+        <span>{{ cinema.name }}</span>
+        <span>{{ cinema.location }}</span>
+        <span>{{ cinema.numberOfMovies }}</span>
+        <button
+          class="btn btn-warning rounded-pill text-dark"
+          (click)="editCinema( cinema.name)"
+        >
+          Edit
+        </button>
+      </div>
+    </div>
+  </div>
+  
