movie form done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
 <!-- <app-login></app-login> -->
 <!-- <app-signup></app-signup> -->
-<app-feedback></app-feedback>
+<!-- <app-feedback></app-feedback> -->
 <!-- <app-vendor-form></app-vendor-form> -->
 <!-- <app-vendor-form></app-vendor-form> -->
+<app-movie-form></app-movie-form>
