--- a/src/app/components/form/vendor-form/vendor-form.component.css
+++ b/src/app/components/form/vendor-form/vendor-form.component.css
@@ -1,6 +1,6 @@
 .body{
   width: 100%;
-  background-image: url('../../../assets/cinema.jpeg');
+  background-image: url('../../../assets/imgs/cinema.jpeg');
   background-attachment: fixed;
   background-size: cover;
   color: white;
@@ -95,7 +95,7 @@ form h2{
 }
 
 .reset{
-  margin-top: 10px;
+  margin-top: -5px;
   border-radius: 10px;
   width: 100%;
   justify-content: center;
