--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -1,6 +1,6 @@
 .body{
   width: 100%;
-  background-image: url('../../../assets/cinema.jpeg');
+  background-image: url('../../../assets/imgs/cinema.jpeg');
   background-attachment: fixed;
   background-size: cover;
   color: white;
