--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -1,128 +1,3 @@
-<!-- <div
-  class="container"
-  style="
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    color: #11435a;
-  "
->
-  <div
-    class="row"
-    style="
-      width: 100%;
-      max-width: 400px;
-      background: #e2ebef;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      text-align: center;
-    "
-  >
-    <form
-      [formGroup]="feedbackForm"
-      (ngSubmit)="submitFeedbackForm(feedbackForm)"
-    >
-      <div class="container">
-        <div class="profile_img">
-          <img
-            src="../../../assets/imgs/feedback.jpg"
-            alt=""
-            class="img-fluid shadow"
-            style="
-              position: relative;
-              border-radius: 50%;
-              width: 70px;
-              justify-content: center;
-            "
-          />
-        </div>
-      </div>
-      <h2>Feedback</h2>
-      <div class="mb-3 form-group">
-        <label for="email" class="form-label">Email</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          placeholder="name@example.com"
-          formControlName="email"
-        />
-        <div
-          class="alert alert-danger"
-          *ngIf="
-            feedbackForm.get('email')?.errors &&
-            feedbackForm.get('email')?.touched
-          "
-          style="
-            height: max-content;
-            min-height: 30px;
-            max-height: 100px;
-            margin-top: 3px;
-            padding-top: 4px;
-            padding-bottom: 0px;
-            overflow: none;
-            color: #666;
-          "
-        >
-          <p *ngIf="feedbackForm.get('email')?.getError('required')">
-            Email is required
-          </p>
-          <p *ngIf="feedbackForm.get('email')?.getError('email')">
-            Email is Invalid
-          </p>
-        </div>
-      </div>
-      <div class="mb-3 form-group">
-        <label for="description" class="form-label">Feedback</label>
-        <textarea
-          class="form-control"
-          id="description"
-          rows="3"
-          placeholder="Enter your feedback here"
-          formControlName="feedback"
-        ></textarea>
-        <div
-          class="alert alert-danger"
-          *ngIf="
-            feedbackForm.get('feedback')?.errors &&
-            feedbackForm.get('feedback')?.touched
-          "
-          style="
-            height: max-content;
-            min-height: 30px;
-            max-height: 100px;
-            margin-top: 3px;
-            padding-top: 4px;
-            padding-bottom: 0px;
-            overflow: none;
-            color: #666;
-          "
-        >
-          <p *ngIf="feedbackForm.get('feedback')?.getError('required')">
-            Feedback is required
-          </p>
-        </div>
-      </div>
-      <button
-        type="submit"
-        class="btn"
-        [disabled]="feedbackForm.invalid"
-        (click)="displayLoader()"
-      >
-        <span *ngIf="!showLoader">Submit</span>
-        <div style="justify-content: center; display: flex">
-          <mat-spinner
-            style="width: 3em; height: 2em"
-            *ngIf="showLoader"
-          ></mat-spinner>
-        </div>
-      </button>
-    </form>
-  </div>
-</div> -->
 <div class="body">
   <div
     class="container"
@@ -205,7 +80,7 @@
           class="form-control"
           id="description"
           rows="3"
-          placeholder="Enter your feedback here"
+          placeholder="Enter your feedback here..."
           formControlName="feedback"
         ></textarea>
         <div
