--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,7 +1,7 @@
 .body{
   width: 100%;
   height: 100%;
-  background-image: url('../../../assets/cinema.jpeg');
+  background-image: url('../../../assets/imgs/cinema.jpeg');
   background-attachment: fixed;
   background-size: cover;
   color: white;
